force-app/main/default/objects/Layout__c/Layout__c.object-meta.xml
<CustomObject>
    <label>Layout</label>
    <nameField>
        <label>Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>