force-app/main/default/objects/Layout__c/fields/Akamai_Generic_URL__c.field-meta.xml
<CustomField>
    <fullName>Akamai_Generic_URL__c</fullName>
    <label>Akamai Generic URL</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>