force-app/main/default/objects/Layout__c/fields/HTML_Layout__c.field-meta.xml
<CustomField>
    <fullName>HTML_Layout__c</fullName>
    <label>HTML Layout</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>