force-app/main/default/objects/Layout__c/fields/Items_Number__c.field-meta.xml
<CustomField>
    <fullName>Items_Number__c</fullName>
    <label>Items Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>